--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>👻</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <style>
+        body {
+            padding: 30px;
+        }
+
+        .app-comments {
+            margin:20px 0;
+        }
+
+        .app-clickable {
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <div id="container"></div>
+<div id="container"></div>
     <script src="/static/bundle.js"></script>
 </body>
 </html>
